bug 23063 - insufficient spacing for menulist widget (r=jhawk).
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@20887 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/content/global/menu.css
+++ b/feathers/purplerain/chrome/content/global/menu.css
@@ -142,7 +142,7 @@ popup > menuitem[_moz-menuactive="true"] {
 menulist > menupopup > menuitem,
 .menulist-menupopup > menu,
 menulist > menupopup > menu {
-/*  padding-right: 25px !important;*/
+  padding-right: 8px !important;
   max-width: none;
 }
 
