--- a/feathers/purplerain/chrome/skin/images.css
+++ b/feathers/purplerain/chrome/skin/images.css
@@ -85,7 +85,6 @@ treecolpicker > .tree-columnpicker-icon {
 }
 
 menulist .dropmarker-icon {
-  margin-right: 10px;
   margin-left: -10px;
 }
 .dropmarker-icon {
